# flutter_mozjpeg

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/jp/espresso3389/flutter_mozjpeg/: FlutterMozjpegPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/jp/espresso3389/flutter_mozjpeg_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_mozjpeg.podspec
ios/Classes/: FlutterMozjpegPlugin.h  FlutterMozjpegPlugin.m  SwiftFlutterMozjpegPlugin.swift  cderror.h  cdjapi.cpp  cdjapi.h  cdjpeg.cpp  cdjpeg.h  jpegcompress.cpp  jpegtran.cpp  rdswitch.cpp  vector_dest_mgr.h
lib/: flutter_mozjpeg.dart
test/: flutter_mozjpeg_test.dart
